Other spacing  fix on Project page.

--- a/src/themes/pece_scholarly_lite/assets/sass/partials/nodes/pece-project.sass
+++ b/src/themes/pece_scholarly_lite/assets/sass/partials/nodes/pece-project.sass
@@ -14,13 +14,13 @@
 .field-name-field-pece-funding-agency,
 .field-name-field-pece-multiple-link
   a
-    padding: 6px 8px 6px 0
+    display: block
+    padding: 6px 8px
 
 .field-name-field-pece-proj-struct-analytics
   .field-item
     display: block
     a
-      padding-left: 0
       font-size: 15px
       background: none
       color: $link-color
